lsystem/antlr4/g4/LSystemInput.g4
grammar LSystemInput;
symSeq: sym+ EOF;
sym: symName '(' symArgs? ')'
    | Punct;
symName: String;
symArgs: symArg (',' symArg)*;
symArg: Number;

Newline: '\n';
Punct: '[' | ']';
String: [a-zA-Z_]+[0-9]*;
Number: [+-]?[0-9]+('.'[0-9]*)?'f'?;
